fix student name spacing

--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -44,3 +44,7 @@ td {
 .email-btn {
   width: 310px;
 }
+
+.full-name {
+  margin-left: 12px;
+}
